alternatecalendar: show Persian month instead of Gregorian month

BUG: 463196
FIXED-IN: 5.27